--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 72, 202, 228;
+    /* 255, 255, 255; */
     --background-start-rgb: 82, 197, 220;
     /* --background-end-rgb: 82, 197, 220; */
     --background: white;
